# aeron-cluster-client-cpp

./: .clang-format  .gitignore  CMakeLists.txt  GETTING_STARTED.md  LICENSE  README.md
cmake/: AeronClusterConfig.cmake.in  CompilerWarnings.cmake  FindAeron.cmake
examples/: CMakeLists.txt  advanced_features_example.cpp  automatic_signal_handling_example.cpp  basic_client_example.cpp  commit_resume_example.cpp  order_publishing_example.cpp  pubsub_reconnect_test.cpp
include/aeron_cluster/: ack_decoder.hpp  cluster_client.hpp  commit_manager.hpp  config.hpp  debug_utils.hpp  logging.hpp  message_handler.hpp  message_handlers.hpp  order_types.hpp  performance_config.hpp  protocol.hpp  sbe_messages.hpp  session_manager.hpp  signal_handler.hpp  subscription.hpp  topic_router.hpp
include/model/: Acknowledgment.h  CommitOffsetLite.h  OrderNotificationLite.h  OrderRequestLite.h  TopicMessage.h  VarStringEncoding.h
scripts/: build.sh  build_production.sh  install_aeron.sh  quick_fix_aeron.sh  setup_project.sh
src/: ack_decoder.cpp  cluster_client.cpp  cluster_client_offer.cpp  commit_manager.cpp  config.cpp  message_handler.cpp  message_handlers.cpp  message_handlers.hpp  order_types.cpp  sbe_encoder.cpp  session_manager.cpp  session_manager.hpp  signal_handler.cpp
tests/: CMakeLists.txt  test_commit_resume.cpp
tests/integration/: test_end_to_end.cpp
tests/unit/: test_config.cpp  test_logging.cpp  test_order_types.cpp
tools/: CMakeLists.txt  cluster_monitor.cpp  message_inspector.cpp
